# rust-window

./: Cargo.toml  README.md  build.rs  todo
res/: cube.mtl
src/: camera.rs  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
